--- a/lib-fastscrollrecyclerview/build.gradle
+++ b/lib-fastscrollrecyclerview/build.gradle
@@ -31,3 +31,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:23.1.1'
 }
+
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
