upload to maven central

--- a/lib-fastscrollrecyclerview/build.gradle
+++ b/lib-fastscrollrecyclerview/build.gradle
@@ -32,4 +32,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 }
 
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+apply from: '../gradle-mvn-push.gradle'
+
+afterEvaluate {
+    androidJavadocs.classpath += project.android.libraryVariants.toList().first().javaCompile.classpath
+}
