--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.0.0'
-    compile project(':lib-fastscrollrecyclerview')
+    compile project(':library')
 }
